--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8" />
@@ -7,20 +7,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- Descripcion y keywords -->
-    <meta name="description" content="Empresa dedicada a la venta de equipo de entrenamiento, desde gimnasia a levantamientos olimpicos">
+    <meta name="description"
+        content="Empresa dedicada a la venta de equipo de entrenamiento, desde gimnasia a levantamientos olimpicos">
     <meta name="keywords" content="Gimnasio, Entrenamiento, Fitness, Levantamiento olimpico, Crossfit, Calistenia">
 
     <!-- Bootstrap -->
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
-        integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
-        integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
-        crossorigin="anonymous"></script>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj"
         crossorigin="anonymous"></script>
 
     <!-- Google fonts -->
@@ -42,7 +37,7 @@
     <header id="arriba" class="header">
         <!-- Menu responsive -->
         <input type="checkbox" id="btn_menu" />
-        <label for="btn_menu"> <img src="imagenes/menu.jpg" alt="imagenMenu"/></label>
+        <label for="btn_menu"> <img src="imagenes/menu.jpg" alt="imagenMenu" /></label>
 
         <!-- Logo -->
         <div class="header__logo">
@@ -108,11 +103,34 @@
         <!-- Buscador -->
         <div class="header__search">
             <img src="imagenes/search.jpg" alt="buscador" />
-            <img src="imagenes/carrito.png" alt="carrito" class="carrito">
         </div>
+
+        <!-- Carrito -->
+        <div class="dropdown">
+            <img src="imagenes/carrito.png" class="dropdown-toggle imgCarrito" id="dropdownMenuLink"
+                data-bs-toggle="dropdown" aria-expanded="false">
+
+            <div id="carrito" class="dropdown-menu" aria-labelledby="navbarCollapse">
+                <table id="lista-carrito" class="table">
+                    <thead>
+                        <tr>
+                            <th>Imagen</th>
+                            <th>Producto</th>
+                            <th>Precio</th>
+                            <th></th>
+                        </tr>
+                    </thead>
+                    <tbody></tbody>
+                </table>
+                <div class="btnsCarrito">
+                    <a href="#" id="vaciar-carrito" class="btn btn-danger btn-block">Vaciar Carrito</a>
+                    <a href="#" id="procesar-pedido" class="btn btn-success btn-block">Procesar Compra</a>
+                </div>
+            </div>
     </header>
 
     <main>
+        <div class="lista-productos"></div>
         <section class="main__titulo">
             <a href="#arriba">
                 <h1>Rhino Equipment</h1>
@@ -122,42 +140,48 @@
         <section class="main__carousel">
             <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-indicators">
-                  <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-                  <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-                  <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
+                        aria-current="true" aria-label="Slide 1"></button>
+                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+                        aria-label="Slide 2"></button>
+                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
+                        aria-label="Slide 3"></button>
                 </div>
                 <div class="carousel-inner">
-                  <div class="carousel-item active">
-                    <img src="imagenes/rack_background2.jpeg" class="d-block w-100" alt="rack">
-                    <div class="carousel-caption d-none d-md-block">
-                      <h5> RHINO PROFESSIONAL RACK 10% DISCOUNT</h5>
-                      <button type="button" class="btn btn-dark"> SHOP NOW </button>
+                    <div class="carousel-item active">
+                        <img src="imagenes/rack_background2.jpeg" class="d-block w-100" alt="rack">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5> RHINO PROFESSIONAL RACK 10% DISCOUNT</h5>
+                            <button type="button" class="btn btn-dark"> SHOP NOW </button>
+                        </div>
                     </div>
-                  </div>
-                  <div class="carousel-item">
-                    <img src="imagenes/barbell_background.jpg" class="d-block w-100" alt="barbell">
-                    <div class="carousel-caption d-none d-md-block">
-                      <h5> KLOKOV BARBELLS </h5>
-                      <button type="button" class="btn btn-dark"> SHOP NOW</button>
+                    <div class="carousel-item">
+                        <img src="imagenes/barbell_background.jpg" class="d-block w-100" alt="barbell">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5> KLOKOV BARBELLS </h5>
+                            <button type="button" class="btn btn-dark"> SHOP NOW</button>
+                        </div>
                     </div>
-                  </div>
-                  <div class="carousel-item">
-                    <img src="imagenes/wodgenerator.jpg" class="d-block w-100" alt="...">
-                    <div class="carousel-caption d-none d-md-block">
-                      <h5> WOD GENERATOR </h5>
-                      <a href="#wodGen"> <button class="btn btn-dark"> GENERA TU WOD ALEATORIO Y ENTRENA! </button> </a>
+                    <div class="carousel-item">
+                        <img src="imagenes/wodgenerator.jpg" class="d-block w-100" alt="...">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5> WOD GENERATOR </h5>
+                            <a href="#wodGen"> <button class="btn btn-dark"> GENERA TU WOD ALEATORIO Y ENTRENA!
+                                </button> </a>
+                        </div>
                     </div>
-                  </div>
                 </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                  <span class="visually-hidden">Previous</span>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
+                    data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
                 </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                  <span class="visually-hidden">Next</span>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
+                    data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
                 </button>
-              </div>
+            </div>
         </section>
 
         <section class="main__productos">
@@ -277,8 +301,13 @@
 
 
 
-
-
+    <script src="js/carrito.js"></script>
+    <script src="js/pedido.js"></script>
     <script src="js/main.js"></script>
+    <script src="js/jquery-3.4.1.min.js"></script>
+    <script src="js/sweetalert2.min.js"></script>
+
+
 </body>
+
 </html>
