--- a/paginas/racks_wallMount.html
+++ b/paginas/racks_wallMount.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -11,16 +12,10 @@
     <meta name="keywords" content="Gimnasio, Entrenamiento, Fitness, Levantamiento olimpico, Crossfit, Rack, Discos olimpicos">
 
     <!-- Bootstrap -->
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
-        integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
-        integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
-        crossorigin="anonymous"></script>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj"
         crossorigin="anonymous"></script>
 
     <!-- Google fonts -->
@@ -28,6 +23,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@900&display=swap" rel="stylesheet" />
 
     <!-- Mi Css -->
+    <link rel="stylesheet" href="../css/sweetalert2.min.css">
     <link rel="stylesheet" href="../css/style.css" />
 
     <!-- Favicon -->
@@ -37,7 +33,11 @@
     <title> Racks | Wall Mount </title>
 </head>
 
+
 <body>
+
+    <!-- HEADER ----------------------------------------------------------------------->
+
     <header id="arriba" class="header">
         <!-- Menu responsive -->
         <input type="checkbox" id="btn_menu" />
@@ -105,24 +105,56 @@
         </nav>
 
         <!-- Buscador -->
-        <div class="header__search"><img src="../imagenes/search.jpg" alt="buscador" /></div>
+        <div class="header__search">
+            <img src="../imagenes/search.jpg" alt="buscador" />
+        </div>
+
+        <!-- Carrito -->
+        <div class="dropdown">
+            <img src="../imagenes/carrito.png" class="dropdown-toggle imgCarrito" id="dropdownMenuLink"
+                data-bs-toggle="dropdown" aria-expanded="false">
+
+            <div id="carrito" class="dropdown-menu" aria-labelledby="navbarCollapse">
+                <table id="lista-carrito" class="table">
+                    <thead>
+                        <tr>
+                            <th>Imagen</th>
+                            <th>Producto</th>
+                            <th>Precio</th>
+                            <th></th>
+                        </tr>
+                    </thead>
+                    <tbody></tbody>
+                </table>
+                <div class="btnsCarrito">
+                    <a href="#" id="vaciar-carrito" class="btn btn-danger btn-block">Vaciar Carrito</a>
+                    <a href="#" id="procesar-pedido" class="btn btn-success btn-block">Procesar Compra</a>
+                </div>
+            </div>
+        </div>
     </header>
 
-    <main class="mainCompras">
 
+    <!-- MAIN ----------------------------------------------------------------------->
+
+    <main class="mainCompras" id="lista-productos">
+
+        <!-- Titulo pag-->
         <section class="main__titulo">
             <a href="#arriba">
                 <h1> Racks </h1>
             </a>
         </section>
 
+        <!-- Imagen encabezado-->
         <section class="mainCompras__imagenEncabezado racks">
             <h2> Wall mount rack </h2>
         </section>
 
+         <!-- Imagen productos-->
         <section class="mainCompras__imagenProductos">
             <div class="mainCompras__imagenProductos--div1">
-                <img src="../imagenes/plegable1.jpg" alt="rackPlegable" />
+                <img src="../imagenes/plegable1.jpg" alt="rackPlegable" class="imagenCarrito" />
             </div>
 
             <div class="mainCompras__imagenProductos--div2">
@@ -135,7 +167,6 @@
         </section>
 
         <!-- Bootstrap carrousel para el media de 768px en adelante -->
-
         <section class="mainCompras__carousel">
             <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
@@ -165,8 +196,7 @@
             </div>
         </section>
 
-        <!-- Fin bootsrap -->
-
+        <!-- Descripcion del producto-->
         <section class="mainCompras__descripcionProducto">
             <div class="mainCompras__descripcionProducto--texto">
                 <h3> Wall mount Rack </h3>
@@ -187,7 +217,7 @@
             </div>
 
             <div class="mainCompras__descripcionProducto--especificaciones">
-                <h4>Especificaciones</h4>
+                <h3>Especificaciones</h3>
 
                 <ul>
                     <li>Fabricado en EE. UU.</li>
@@ -212,25 +242,28 @@
             </div>
         </section>
 
+         <!-- Armado del producto-->
         <section class="mainCompras__armado main__armado--rack">
             <img src="../imagenes/rack_pleg_armado.png" alt="armado" />
         </section>
 
-
+        <!-- Comprar producto-->
         <section class="mainCompras__comprar">
             <div class="mainCompras__comprar--titulo">
-                <h5> Wall mount rack M-00001</h5>
+                <h4> Wall mount rack M-00001</h4>
             </div>
 
             <div class="mainCompras__comprar--precio">
-                <b> u$d 940.00 </b>
+                <b class="card-title precio"> u$d <span> 940.00 </span> </b>
             </div>
             <div class="mainCompras__comprar--boton">
-                <a href="#"> <button>Comprar</button></a>
+                <a href="" class="btn btn-block btn-danger agregar-carrito" data-id="3"> Agregar al carrito </a>
             </div>
         </section>
     </main>
 
+
+     <!-- FOOTER--------------------------------------------------------------------------->
     <footer>
         <!-- Contactenos  -->
         <div class="contactenos">
@@ -293,6 +326,13 @@
             </div>
         </div>
     </footer>
-</body>
 
+
+    <!-- JS-->
+    <script src="../js/jquery-3.4.1.min.js"></script>
+    <script src="../js/sweetalert2.min.js"></script>
+    <script src="../js/carrito.js"></script>
+    <script src="../js/pedido.js"></script>
+
+</body>
 </html>
