--- a/paginas/cardio.html
+++ b/paginas/cardio.html
@@ -125,7 +125,7 @@
             </div>
     </header>
 
-    <main class="main_cardio">
+    <main class="main_cardio" id="lista-productos">
         <!-- ROW ERG -->
         <section class="main__productos grid1">
             <div class="main__productos--imagen">
