--- a/paginas/gymnastics.html
+++ b/paginas/gymnastics.html
@@ -125,7 +125,7 @@
             </div>
     </header>
 
-    <main class="main">
+    <main class="main" id="lista-productos">
         <!-- PULL UP BAR -->
         <section class="main__productos grid1">
 
