--- a/paginas/racks.html
+++ b/paginas/racks.html
@@ -126,7 +126,7 @@
 </header>
 
 
-  <main class="main">
+  <main class="main" id="lista-productos">
     
     <!-- PROFESIONAL -->
     <section class="main__productos grid1">
