Arreglo del carrito

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 </head>
 
 <body>
-
+    
     <div class="containerPre" id="containerPre">
         <img src="imagenes/logo.png" alt="logo" width="100">
         <div class="preloader">
@@ -109,15 +109,11 @@
             </ul>
         </nav>
 
-        <!-- Buscador -->
-        <div class="header__search">
-            <img src="imagenes/search.jpg" alt="buscador" />
-        </div>
-
         <!-- Carrito -->
         <div class="dropdown">
             <img src="imagenes/carrito.png" class="dropdown-toggle imgCarrito" id="dropdownMenuLink"
-                data-bs-toggle="dropdown" aria-expanded="false">
+                data-bs-toggle="dropdown" aria-expanded="false"> 
+            <span id= "spanCarrito"></span>
 
             <div id="carrito" class="dropdown-menu" aria-labelledby="navbarCollapse">
                 <table id="lista-carrito" class="table">
