--- a/paginas/barbells_plates.html
+++ b/paginas/barbells_plates.html
@@ -104,9 +104,9 @@
         </nav>
     
         <!-- Buscador -->
-        <div class="header__search"
+        <!-- <div class="header__search"
             ><img src="../imagenes/search.jpg" alt="buscador" />
-        </div>
+        </div> -->
 
         <!-- Carrito -->
         <div class="dropdown">
