--- a/paginas/cardio_bike.html
+++ b/paginas/cardio_bike.html
@@ -106,7 +106,7 @@
         </nav>
     
         <!-- Buscador -->
-        <div class="header__search"><img src="../imagenes/search.jpg" alt="buscador" /></div>
+        <!-- <div class="header__search"><img src="../imagenes/search.jpg" alt="buscador" /></div> -->
 
         <!-- Carrito -->
         <div class="dropdown">
