--- a/paginas/cardio_rower.html
+++ b/paginas/cardio_rower.html
@@ -105,7 +105,7 @@
         </nav>
     
         <!-- Buscador -->
-        <div class="header__search"><img src="../imagenes/search.jpg" alt="buscador" /></div>
+        <!-- <div class="header__search"><img src="../imagenes/search.jpg" alt="buscador" /></div> -->
 
         <!-- Carrito -->
         <div class="dropdown">
