Flecha a la izquiera en compra.html

--- a/compra.html
+++ b/compra.html
@@ -18,7 +18,7 @@
 
 <body>
     <header>
-            <a href="index.html"> Volver atras </a>
+            <a href="index.html"> ← Volver atras </a>
     </header>
 
     <br>
