Pagina carrito arreglada

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                 </table>
                 <div class="btnsCarrito">
                     <a href="#" id="vaciar-carrito" class="btn btn-danger btn-block">Vaciar Carrito</a>
-                    <a href="./compra.html" id="procesar-pedido" class="btn btn-success btn-block">Procesar Compra</a>
+                    <a href="/paginas/compra.html" id="procesar-pedido" class="btn btn-success btn-block">Procesar Compra</a>
                 </div>
             </div>
     </header>
